Ignore the .NET bits and make the Info panels blue!

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -30,7 +30,7 @@ ul#index-nav {
 .main-content {
 
   p.note::before {
-    color: #7253ed;
+    color: #2c84fa;
     content: "\f05a";
     font-family: "Font Awesome 6 Pro";
     display: inline;
