Working SCSS before adding FontAwesome

--- a/examples/302/rockaway/Rockaway.WebApp/Views/Shared/_Layout.cshtml
+++ b/examples/302/rockaway/Rockaway.WebApp/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
 				Rockaway
 			</h1>
 		</a>
+		<label id="nav-toggle" for="nav-checkbox">NAV</label>
+		<input type="checkbox" id="nav-checkbox" />
 		<nav>
 			<a href="/">home</a>
 			<a asp-page="/artists">artists</a>
