--- a/examples/302/rockaway/Rockaway.WebApp/Styles/styles.scss
+++ b/examples/302/rockaway/Rockaway.WebApp/Styles/styles.scss
@@ -1,30 +1,37 @@
 @use "sass:color";
 @import 'reset.css';
-
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap');
-$font-family: 'PT Sans Narrow', Arial, Helvetica, sans-serif;
 
 $foreground-color: #fff;
 $brand-color: #036;
-$panel-background-color: #000;
-$link-color: color.scale($brand-color, $lightness: 50%);
+$background-color: #000;
 $border-radius: 8px;
 $gutter: 8px;
+$font-family: 'PT Sans Narrow', Arial, helvetica, sans-serif;
 
-html {
-	color: $foreground-color;
-	background: $brand-color;
-	background: linear-gradient(150deg, color.scale($brand-color, $lightness: -75%) 0%, color.scale($brand-color, $lightness: +15%) 50%, $brand-color 100%);
-	background-attachment: fixed;
-	font-family: $font-family;
+@mixin smartphone {
+	@media (max-width: 480px) {
+		@content;
+	}
 }
 
-@mixin fancy-panel($bg-color: $panel-background-color) {
+@mixin fancy-panel($panel-color: $background-color) {
 	margin: $gutter 0;
 	border-radius: $border-radius;
 	border: 1px solid $brand-color;
 	padding: 2px + $border-radius;
-	background-color: $bg-color;
+	background-color: $panel-color;
+}
+
+// Check whether we're using a light or dark background:
+$dark-mode: color.lightness($background-color) < 50%;
+
+html {
+	color: $foreground-color;
+	background: $brand-color;
+	background: linear-gradient(120deg, color.scale($brand-color, $lightness: -75%) 0%, color.scale($brand-color, $lightness: +15%) 50%, color.scale($brand-color, $lightness: -25%) 100%);
+	background-attachment: fixed;
+	font-family: $font-family;
 }
 
 body {
@@ -36,12 +43,33 @@ body {
 		@include fancy-panel;
 		display: flex;
 		justify-content: space-between;
+		position: relative;
 
 		h1 {
 			font-size: 0;
 			height: 38px;
 			width: 200px;
 			background: url(/img/rockaway-logotype.svg) left center no-repeat;
+		}
+
+		label#nav-toggle {
+			display: none;
+			@include smartphone {
+				display: block;
+				position: absolute;
+				z-index: 2;
+				top: $gutter;
+				right: $gutter;
+			}
+		}
+
+		input#nav-checkbox {
+			height: 0;
+			@include smartphone {
+				&:checked ~ nav {
+					height: 200px;
+				}
+			}
 		}
 
 		nav {
@@ -57,6 +85,25 @@ body {
 					background: color.scale($brand-color, $lightness: +20%);
 				}
 			}
+
+			@include smartphone {
+				position: absolute;
+				overflow-y: hidden;
+				display: block;
+				top: 0;
+				left: 0;
+				right: 0;
+				height: 0;
+				transition: height 0.2s ease;
+
+				a {
+					display: block;
+					width: 100%;
+					padding: 16px;
+					border-radius: 0;
+					border-top: 1px solid $foreground-color;
+				}
+			}
 		}
 	}
 
@@ -65,12 +112,20 @@ body {
 	}
 
 	> footer {
+		@include fancy-panel;
 		font-size: 80%;
 		display: flex;
+		flex-flow: row wrap;
 		justify-content: space-between;
-		@include fancy-panel;
-
+		span {
+			flex-grow: 1;
+			@include smartphone {
+				text-align: center;
+			}
+		}
 		nav {
+			text-align: right;
+			flex-grow: 1;
 			a {
 				display: inline-block;
 				border-left: 1px solid #fff;
@@ -84,11 +139,22 @@ body {
 			a:hover {
 				text-decoration: underline;
 			}
+
+			@include smartphone {
+				width: 100%;
+				text-align: center;
+				a {
+					display: block;
+					border: 0;
+				}
+			}
+
 		}
 	}
 
 	a {
-		color: $link-color;
+		$amount: if($dark-mode, +75%, -75%);
+		color: color.scale($brand-color, $lightness: $amount);
 		text-decoration: none;
 	}
 }
