--- a/examples/401/rockaway/Rockaway.WebApp/Areas/Admin/Views/Home/Index.cshtml
+++ b/examples/401/rockaway/Rockaway.WebApp/Areas/Admin/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
 <h1>Admin</h1>
 <p>This is a secure admin area</p>
-<a asp-action="Index" asp-controller="Artists">Artists</a>
-<a asp-action="Index" asp-controller="Venues">Venues</a>
+<ul>
+	<li><a asp-action="Index" asp-controller="Artists">Artists</a></li>
+	<li><a asp-action="Index" asp-controller="Venues">Venues</a></li>
+	<li><a asp-action="Index" asp-controller="Shows">Shows</a></li>
+</ul>
