Styling the frontend bits

--- a/examples/501/Rockaway/Rockaway.WebApp/Pages/Elements.cshtml
+++ b/examples/501/Rockaway/Rockaway.WebApp/Pages/Elements.cshtml
@@ -6,7 +6,8 @@
 		}
 
 			section.grid-examples div.row div div {
-				background-color: #ccc;
+				background-color: #999;
+				font-size: 0.6em;
 				padding: 8px;
 				font-family: monospace;
 			}
