Section 502 (design) done

--- a/examples/502/Rockaway/Rockaway.WebApp/Pages/Shared/_Layout.cshtml
+++ b/examples/502/Rockaway/Rockaway.WebApp/Pages/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 }
 <header>
 	<h1>
-		<a asp-page="/Index">Rockaway</a>
+		<a asp-area="" asp-page="/Index" asp-page="/Index">Rockaway</a>
 	</h1>
 	<nav>
 		<a asp-action="Index" asp-controller="Artists">Artists</a>
