--- a/examples/401/Rockaway/Rockaway.WebApp/_ViewImports.cshtml
+++ b/examples/401/Rockaway/Rockaway.WebApp/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using Rockaway.WebApp
+@using Rockaway.WebApp
 @using Microsoft.AspNetCore.Identity
 @namespace Rockaway.WebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
