--- a/examples/402/Rockaway/Rockaway.WebApp/Pages/Shared/_Layout.cshtml
+++ b/examples/402/Rockaway/Rockaway.WebApp/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,14 +8,13 @@
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/Rockaway.WebApp.styles.css" asp-append-version="true" />
 </head>
-
 <body>
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 			<div class="container">
 				<a class="navbar-brand" asp-area="" asp-page="/Index">Rockaway.WebApp</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-					aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+						aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -28,14 +26,13 @@
 							<a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-action="Index"
-								asp-controller="Artists">Artists</a>
+							<a class="nav-link text-dark" asp-area="" asp-action="Index" asp-controller="Artists">Artists</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-action="Index"
-								asp-controller="Venues">Venues</a>
+							<a class="nav-link text-dark" asp-area="" asp-action="Index" asp-controller="Venues">Venues</a>
 						</li>
 					</ul>
+					<partial name="_LoginPartial" />
 				</div>
 			</div>
 		</nav>
@@ -48,11 +45,7 @@
 
 	<footer class="border-top footer text-muted">
 		<div class="container">
-			&copy; 2024 - <a href="/">Rockaway</a>
-			-
-			<a asp-area="" asp-page="/Privacy">Privacy</a>
-			-
-			<a asp-area="Admin" asp-page="/Index">Admin</a>
+			&copy; 2024 - Rockaway.WebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
 		</div>
 	</footer>
 
@@ -62,5 +55,4 @@
 
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
-
 </html>
