--- a/examples/402/Rockaway/Rockaway.WebApp/_ViewImports.cshtml
+++ b/examples/402/Rockaway/Rockaway.WebApp/_ViewImports.cshtml
@@ -1,2 +1,4 @@
-@namespace Rockaway.WebApp
+@using Rockaway.WebApp
+@using Microsoft.AspNetCore.Identity
+@namespace Rockaway.WebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
