Tests using authentication for the admin area.

--- a/examples/501/Rockaway/Rockaway.WebApp/wwwroot/scss/frontend.scss
+++ b/examples/501/Rockaway/Rockaway.WebApp/wwwroot/scss/frontend.scss
@@ -5,8 +5,9 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap');
 $font-family-sans-serif: 'PT Sans Narrow', Arial, Helvetica, sans-serif;
 
+$body-color-dark: #ddd;
 $body-bg-dark: #000;
-$primary: #336699;
+$primary: #39f;
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "../lib/bootstrap/scss/variables";
