--- a/examples/502/Rockaway/Rockaway.WebApp/wwwroot/scss/frontend.scss
+++ b/examples/502/Rockaway/Rockaway.WebApp/wwwroot/scss/frontend.scss
@@ -1,17 +1,20 @@
 @use "sass:color";
 
-// Customising Bootstrap via imports:
-// https://getbootstrap.com/docs/5.3/customize/sass/#importing
-
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "../lib/bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap');
-$font-family-sans-serif: 'PT Sans Narrow', Arial, Helvetica, sans-serif;
+$font-family-sans-serif: 'PT Sans Narrow', Arial, helvetica, sans-serif;
 
+$body-color-dark: #ddd;
 $body-bg-dark: #000;
-$primary: #336699;
+$primary: #39f;
+$border-radius: 0.25rem;
+$border-radius-sm: 0.5 * $border-radius;
+$border-radius-lg: 1.5 * $border-radius;
+$border-radius-xl: 3 * $border-radius;
+$border-radius-xxl: 6 * $border-radius;
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "../lib/bootstrap/scss/variables";
@@ -23,19 +26,8 @@ $primary: #336699;
 @import "../lib/bootstrap/scss/maps";
 @import "../lib/bootstrap/scss/mixins";
 @import "../lib/bootstrap/scss/root";
-
-// 6. Optionally include any other parts as needed
-// @import "../lib/bootstrap/scss/utilities";
-// @import "../lib/bootstrap/scss/reboot";
-// @import "../lib/bootstrap/scss/type";
-// @import "../lib/bootstrap/scss/images";
-// @import "../lib/bootstrap/scss/containers";
-// @import "../lib/bootstrap/scss/grid";
-// @import "../lib/bootstrap/scss/helpers";
-
-// ...or import the whole Bootstrap library:
+// 6. Import the whole Bootstrap library:
 @import "../lib/bootstrap/scss/bootstrap.scss";
-
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../lib/bootstrap/scss/utilities/api";
 
@@ -44,13 +36,13 @@ $primary: #336699;
 @mixin fancy-panel($panel-color: color.scale($primary, $lightness: -75%)) {
 	margin: $grid-gutter-width 0;
 	border-radius: 2 * $border-radius;
-	padding: 2 * $border-radius;
+	padding: calc($grid-gutter-width/4) + $border-radius;
 	background-color: $panel-color;
 	border: 1px solid $body-color;
 }
 
 html {
-	background: linear-gradient(150deg, color.scale($primary, $lightness: -70%) 0%, color.scale($primary, $lightness: -50%) 50%, color.scale($primary, $lightness: -80%) 100%);
+	background: linear-gradient(150deg, color.scale($primary, $lightness: -70%) 0%, color.scale($primary, $lightness: -50%) 50%, color.scale($primary, $lightness: -80%) 100% );
 	background-attachment: fixed;
 }
 
@@ -69,7 +61,7 @@ body {
 		h1 {
 			a {
 				display: block;
-				font-size:0;
+				font-size: 0;
 				height: 38px;
 				width: 200px;
 				background: url(/img/rockaway-logotype.svg) left center no-repeat;
@@ -100,22 +92,22 @@ body {
 		font-size: 80%;
 		display: flex;
 		justify-content: space-between;
+
 		nav {
 			a {
 				display: inline-block;
 				border-left: 1px solid #fff;
 				padding: 0 0.5em;
 				text-decoration: none;
-				// color: $body-color-dark;
 			}
+
 			a:first-child {
 				border: none;
 			}
+
 			a:hover {
-				// color: $body-color;
 				text-decoration: underline;
 			}
 		}
 	}
-
 }
