--- a/examples/510/Rockaway/Rockaway.WebApp/wwwroot/css/frontend.css
+++ b/examples/510/Rockaway/Rockaway.WebApp/wwwroot/css/frontend.css
@@ -27363,8 +27363,16 @@ div.artist-card h4 a, div.artist-card .h4 a {
   text-decoration: none;
 }
 
-.ticket-selector .row {
-  margin-bottom: 0.75rem;
+form > .row {
+  margin-bottom: 0.375rem;
 }
+
+hr {
+  opacity: 1;
+}
+
+/*.row > * {
+	outline: 1px dashed #ff0;
+}*/
 
 /*# sourceMappingURL=frontend.css.map */
