--- a/examples/600/Rockaway/Rockaway.WebApp/Templates/Mail/OrderConfirmation.mjml
+++ b/examples/600/Rockaway/Rockaway.WebApp/Templates/Mail/OrderConfirmation.mjml
@@ -1,70 +1,78 @@
 <mjml>
-  <mj-body background-color="#d7dde5">
-    <mj-section full-width="full-width">
-      <mj-column width="66.66666666666666%" vertical-align="middle">
-        <mj-text align="left" font-size="11px" padding-bottom="0px" padding-top="0"><span style="font-size: 11px">@Model.VenueSummary</span></mj-text>
-      </mj-column>
-      <mj-column width="33.33333333333333%" vertical-align="middle">
-        <mj-text align="right" font-size="11px" padding-bottom="0px" padding-top="0"><span style="font-size: 11px"><a href="https://mjml.io" style="text-decoration: none; color: inherit;">[[PERMALINK_LABEL]]</a></span></mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section background-color="#ffffff" full-width="full-width">
-      <mj-column width="33.33333333333333%" vertical-align="middle">
-        <mj-image src="http://191n.mj.am/img/191n/1t/hx.png" alt="OnePage" padding-bottom="0px" padding-top="10px"></mj-image>
-      </mj-column>
-      <mj-column width="66.66666666666666%" vertical-align="middle">
-        <mj-text align="center" padding-bottom="0px" padding-top="10px"><a href="https://mjml.io" style="text-decoration: none; color: inherit;">Home</a>&#xA0;&#xA0;&#xA0;&#xA0;&#xA0;&#xA0;&#xA0;&#xA0;<a href="https://mjml.io" style="text-decoration: none; color: inherit;">Features</a>&#xA0;&#xA0;&#xA0;&#xA0;&#xA0;&#xA0;&#xA0;&#xA0;
-          <a href="https://mjml.io" style="text-decoration: none; color: inherit;">Portfolio</a>
-        </mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section background-url="http://191n.mj.am/img/191n/1t/h0.jpg" vertical-align="middle" background-size="cover" full-width="full-width" background-repeat="no-repeat">
-      <mj-column width="100%" vertical-align="middle">
-        <mj-text align="center" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="45px"><span style="font-size: 30px; line-height: 30px;">More than an email template</span><br /><br />Only on <span style="color: #e85034">Mailjet</span> template builder</mj-text>
-        <mj-button align="center" background-color="#e85034" color="#fff" border-radius="24px" href="https://mjml.io" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" padding-bottom="45px" padding-top="10px">SUBSCRIBE</mj-button>
-      </mj-column>
-    </mj-section>
-    <mj-section background-color="#ffffff" vertical-align="top" full-width="full-width">
-      <mj-column vertical-align="top" width="33.33333333333333%">
-        <mj-image src="http://191n.mj.am/img/191n/1t/hs.png" alt="" width="50px"></mj-image>
-        <mj-text align="center" color="#9da3a3" font-size="11px" padding-bottom="30px"><span style="font-size: 14px; color: #e85034">Best audience</span><br /><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend sagittis nunc, et fermentum est ullamcorper dignissim.</mj-text>
-      </mj-column>
-      <mj-column vertical-align="top" width="33.33333333333333%">
-        <mj-image src="http://191n.mj.am/img/191n/1t/hm.png" alt="" width="50px"></mj-image>
-        <mj-text align="center" color="#9da3a3" font-size="11px" padding-bottom="30px"><span style="font-size: 14px; color: #e85034">Higher rates</span><br /><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend sagittis nunc, et fermentum est ullamcorper dignissim.</mj-text>
-      </mj-column>
-      <mj-column vertical-align="top" width="33.33333333333333%">
-        <mj-image src="http://191n.mj.am/img/191n/1t/hl.png" alt="" width="50px"></mj-image>
-        <mj-text align="center" color="#9da3a3" font-size="11px" padding-bottom="30px" padding-top="3px"><span style="font-size: 14px; color: #e85034">24/7 Support</span><br /><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend sagittis nunc, et fermentum est ullamcorper dignissim.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section background-color="#e85034" vertical-align="middle" full-width="full-width">
-      <mj-column width="100%" vertical-align="middle">
-        <mj-text align="center" color="#ffffff" font-size="18px" padding-bottom="10px">Why choose us?</mj-text>
-        <mj-divider border-color="#fff" border-style="solid" border-width="1px" padding-left="100px" padding-right="100px" padding-bottom="20px" padding-top="20px"></mj-divider>
-        <mj-text align="center" color="#f8d5d1" font-size="11px" padding-bottom="25px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section vertical-align="middle" background-color="#ffffff" full-width="full-width">
-      <mj-column width="50%" vertical-align="middle">
-        <mj-image src="http://191n.mj.am/img/191n/1t/h2.jpg" alt="" padding-bottom="20px" padding-top="20px"></mj-image>
-      </mj-column>
-      <mj-column width="50%" vertical-align="middle">
-        <mj-text align="left" color="#9da3a3" font-size="11px" padding-bottom="25px" padding-top="25px"><span style="font-weight: bold; font-size: 14px; color: #45474e">Great newsletter for the best company out there</span><br /><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-          aliqua. Ut enim ad minim veniam.</mj-text>
-        <mj-button align="left" background-color="#e85034" color="#fff" border-radius="24px" font-size="11px" href="https://mjml.io" font-family="Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif" padding-bottom="45px" padding-top="10px">READ MORE</mj-button>
-      </mj-column>
-    </mj-section>
-    <mj-section full-width="full-width">
-      <mj-column width="100%" vertical-align="middle">
-        <mj-text align="center" font-size="11px" padding-bottom="0px" padding-top="0px">
-          <p style="font-size: 11px">[[DELIVERY_INFO]]</p>
-        </mj-text>
-        <mj-text align="center" font-size="11px" padding-bottom="0px" padding-top="0px">
-          <p style="font-size: 11px">[[POSTAL_ADDRESS]]</p>
-        </mj-text>
-      </mj-column>
-    </mj-section>
-  </mj-body>
+	<mj-head>
+		<mj-preview>Your tickets to @Model.Headliner</mj-preview>
+		<mj-font name="PT Sans Narrow" href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700" />
+		<mj-attributes>
+			<mj-text font-family="PT Sans Narrow, Helvetica, Arial, sans-serif" font-size="18px" line-height="24px"></mj-text>
+			<mj-class name="brand-panel" background-color="#0f0f0f" color="#ffffff"></mj-class>
+		</mj-attributes>
+		<mj-style inline="inline">
+			tr.order-item td { padding: 8px 0; border-bottom: 2px solid #000; }
+			tr.order-total td { font-weight: 600; padding: 8px 0; }
+		</mj-style>
+	</mj-head>
+	<mj-body background-color="#ffffff">
+		<mj-wrapper background-color="#ffffff" background-url="@Model.Artist.GetImageUrl(600,300)" background-size="cover" padding-bottom="20px" padding-top="240px">
+			<mj-section background-color="rgba(0,0,0,0.5)">
+				<mj-column>
+					<mj-text align="center" font-size="22px" color="#fff">
+						@Model.Artist.Name
+					</mj-text>
+				</mj-column>
+			</mj-section>
+		</mj-wrapper>
+		<mj-section padding-bottom="0">
+			<mj-column width="100%">
+				<mj-text>
+					<p>
+						<strong>Hey @Model.CustomerName - you're going to see @Model.Artist.Name!</strong>
+					</p>
+					<strong>@Model.Artist.Name</strong><br />
+					@if(Model.HasSupport) {
+					<em>plus special guests</em>
+					@Model.SupportArtistsText<br />
+					}<br />
+					@Model.VenueSummary<br />
+					@Model.Date<br />
+				</mj-text>
+				<mj-divider border-width="1px" border-style="solid" border-color="#000" />
+			</mj-column>
+		</mj-section>
+		<mj-section padding-top="0">
+			<mj-column>
+				<mj-table>
+					@foreach(var item in Model.Contents) {
+					<tr class="order=item">
+						<td>@item.Description @@ @item.UnitPrice</td>
+						<td align="right">@item.TotalPrice</td>
+					</tr>
+					}
+					<tr class="order-total">
+						<td>Total</td>
+						<td align="right">@Model.FormattedTotalPrice</td>
+					</tr>
+				</mj-table>
+				<mj-divider border-width="1px" border-style="solid" border-color="#000" />
+			</mj-column>
+		</mj-section>
+		<mj-section mj-class="brand-panel" padding-bottom="0px" padding-top="0">
+			<mj-column width="100%">
+				<mj-image href='@Model.BaseUri' src='@Model.QualifyUri("/img/rockaway-logotype.svg")' alt="rockaway" width="180px" padding="10px"></mj-image>
+			</mj-column>
+			<mj-column vertical-align="middle">
+				<mj-text mj-class="brand-panel" align="center" font-size="20px">
+					<p>gig tickets for nice people</p>
+				</mj-text>
+				<mj-text mj-class="brand-panel" align="center">
+					<p>Privacy policy</p>
+				</mj-text>
+				<mj-social mode="horizontal">
+					<mj-social-element name="facebook" href="@Model.BaseUri"></mj-social-element>
+					<mj-social-element name="twitter" href="@Model.BaseUri"></mj-social-element>
+					<mj-social-element name="github" href="@Model.BaseUri"></mj-social-element>
+					<mj-social-element name="linkedin" href="@Model.BaseUri"></mj-social-element>
+				</mj-social>
+			</mj-column>
+		</mj-section>
+	</mj-body>
 </mjml>
