--- a/examples/502/Rockaway/Rockaway.WebApp/Pages/Shared/_Layout.cshtml
+++ b/examples/502/Rockaway/Rockaway.WebApp/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 </main>
 <footer>
 	<span>
-		&copy; 2024 Rockaway
+		&copy; 2024 Rockaway <a id="admin-login" href="/admin">admin login</a>
 	</span>
 	<nav>
 		<a asp-page="/about">about us</a>
