--- a/examples/600/Rockaway/Rockaway.WebApp/wwwroot/css/frontend.css
+++ b/examples/600/Rockaway/Rockaway.WebApp/wwwroot/css/frontend.css
@@ -27268,7 +27268,10 @@ body > footer {
     margin: 0 0 0.75rem 0;
   }
 }
-body > footer nav a {
+body > footer a#admin-login {
+  margin-left: 0.5em;
+}
+body > footer a {
   display: inline-block;
   border-left: 1px solid #fff;
   padding: 0 0.5em;
@@ -27277,14 +27280,15 @@ body > footer nav a {
 body > footer nav a:first-child {
   border: none;
 }
-body > footer nav a:hover {
+body > footer a:hover {
   text-decoration: underline;
 }
 @media (max-width: 480px) {
   body > footer {
     margin-bottom: 0;
   }
-  body > footer span, body > footer nav {
+  body > footer span,
+  body > footer nav {
     width: 100%;
     text-align: center;
     display: block;
@@ -27370,9 +27374,5 @@ form > .row {
 hr {
   opacity: 1;
 }
-
-/*.row > * {
-	outline: 1px dashed #ff0;
-}*/
 
 /*# sourceMappingURL=frontend.css.map */
