--- a/examples/509/Rockaway/Rockaway.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/examples/509/Rockaway/Rockaway.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -30,6 +30,9 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="Admin" asp-action="Index" asp-controller="Venues">Venues</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="Admin" asp-action="Index" asp-controller="TicketOrders">Orders</a>
+						</li>
 					</ul>
 					<partial name="~/Areas/Admin/Views/Shared/_LoginPartial.cshtml" />
 				</div>
