Blazor spike. This is fun.

--- a/examples/700/Rockaway/Rockaway.WebApp/Pages/Shared/_Base.cshtml
+++ b/examples/700/Rockaway/Rockaway.WebApp/Pages/Shared/_Base.cshtml
@@ -16,5 +16,6 @@
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
-
+<base href="~/" />
+<script src="_framework/blazor.server.js"></script>
 </html>
