--- a/examples/700/Rockaway/Rockaway.WebApp/Views/Tickets/Show.cshtml
+++ b/examples/700/Rockaway/Rockaway.WebApp/Views/Tickets/Show.cshtml
@@ -1,32 +1,16 @@
+@using Rockaway.WebApp.Components;
 @model Rockaway.WebApp.Models.ShowViewData
-
 <h1>@Model.HeadlineArtistName</h1>
 <p>@Model.VenueName, @Model.VenueAddress</p>
 <p>@Model.ShowDate</p>
 <form class="ticket-selector" method="post">
-	<section class="row">
-		<div class="col-4 offset-2">
-			<strong>Ticket Type</strong>
-		</div>
-		<div class="col-2">
-			<strong>Price</strong>
-		</div>
-		<div class="col-2 text-end">
-			<strong>Quantity</strong>
-		</div>
-	</section>
-	<section class="row">
-		@foreach (var tt in Model.TicketTypes) {
-			<div class="col-4 offset-2">@tt.Name</div>
-			<div class="col-2">@tt.FormattedPrice</div>
-			<div class="col-2 text-end">
-				<input type="number" name="tickets[@tt.Id]" value="0" min="0" max="10" />
-			</div>
-		}
-	</section>
-	<section class="row">
-		<div class="col-8 offset-2 text-end">
-			<input type="submit" value="Next &gt;"/>
-		</div>
-	</section>
+
+@(await Html.RenderComponentAsync<TicketPicker>(RenderMode.ServerPrerendered, new { TicketTypes = Model.TicketTypes, CultureName = Model.CultureName }))
+
+<section class="row">
+	<div class="col-12 col-md-8 offset-md-2 text-end">
+		<input type="submit" value="Next &gt;"/>
+	</div>
+</section>
+
 </form>
