--- a/examples/700/Rockaway/Rockaway.WebApp/Views/Tickets/Show.cshtml
+++ b/examples/700/Rockaway/Rockaway.WebApp/Views/Tickets/Show.cshtml
@@ -9,7 +9,7 @@
 
 <section class="row">
 	<div class="col-12 col-md-8 offset-md-2 text-end">
-		<input type="submit" value="Next &gt;"/>
+		<input type="submit" class="btn btn-primary" value="Next &gt;"/>
 	</div>
 </section>
 
