--- a/examples/508/Rockaway/Rockaway.WebApp/Views/Tickets/Show.cshtml
+++ b/examples/508/Rockaway/Rockaway.WebApp/Views/Tickets/Show.cshtml
@@ -3,30 +3,30 @@
 <h1>@Model.HeadlineArtistName</h1>
 <p>@Model.VenueName, @Model.VenueAddress</p>
 <p>@Model.ShowDate</p>
-<form class="ticket-selector" method="post">
+<form method="post">
 	<section class="row">
-		<div class="col-4 offset-2">
+		<div class="col-6 col-md-4 offset-md-2">
 			<strong>Ticket Type</strong>
 		</div>
-		<div class="col-2">
+		<div class="col-3 col-md-2">
 			<strong>Price</strong>
 		</div>
-		<div class="col-2 text-end">
+		<div class="col-3 col-md-2 text-end">
 			<strong>Quantity</strong>
 		</div>
 	</section>
-	<section class="row">
-		@foreach (var tt in Model.TicketTypes) {
-			<div class="col-4 offset-2">@tt.Name</div>
-			<div class="col-2">@tt.FormattedPrice</div>
-			<div class="col-2 text-end">
+	@foreach (var tt in Model.TicketTypes) {
+		<section class="row">
+			<div class="col-6 col-md-4 offset-md-2">@tt.Name</div>
+			<div class="col-3 col-md-2">@tt.FormattedPrice</div>
+			<div class="col-3 col-md-2 text-end">
 				<input type="number" name="tickets[@tt.Id]" value="0" min="0" max="10" />
 			</div>
-		}
-	</section>
+		</section>
+	}
 	<section class="row">
-		<div class="col-8 offset-2 text-end">
-			<input type="submit" value="Next &gt;"/>
+		<div class="col-12 col-md-8 offset-md-2 text-end">
+			<input type="submit" class="btn btn-primary" value="Next &gt;" />
 		</div>
 	</section>
 </form>
